...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q8A-n7-Uqe" userLabel="CardBlack">
                                <rect key="frame" x="15" y="44" width="345" height="574"/>
                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            </view>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" text="Translate" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresi
                                <rect key="frame" x="20" y="49" width="132" height="36"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="30"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3eU-oK-JLD" userLabel="CardWhite">
...
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.75" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Mu5-xa-gr3" userLabel="English Text View">
                                <rect key="frame" x="15" y="232" width="345" height="128"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="EnglishTextView"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="128" id="14J-pm-trL"/>
                                </constraints>
                                <color key="textColor" systemColor="labelColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="send"/>
...
                                <constraints>
                                    <constraint firstAttribute="trailing" secondItem="7sc-0i-BZc" secondAttribute="trailing" constant="3" id="C9W-wa-nG8"/>
                                    <constraint firstItem="7sc-0i-BZc" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Icu-8m-zpV" secondAttribute="leading" constant="20" symbolic="YES" id="T6V-qQ-8Hw"/>
                                    <constraint firstItem="7sc-0i-BZc" firstAttribute="top" secondItem="Icu-8m-zpV" secondAttribute="top" constant="8" id="gLH-qj-NO5"/>
                                </constraints>
                            </view>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weather" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o5X-tW-F1p">
                                <rect key="frame" x="20" y="49" width="118.5" height="36"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="30"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tkl-On-EZd" userLabel="CardWhite">
...
                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="huQ-bM-bod">
                                <rect key="frame" x="177.5" y="583" width="20" height="20"/>
                            </activityIndicatorView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y6o-3g-Cgz">
                                <rect key="frame" x="153.5" y="572" width="68.5" height="31"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Reload"/>
                                <connections>
                                    <action selector="tappedReloadButton:" destination="QqY-wA-qIo" eventType="touchUpInside" id="d3D-W3-8ZI"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="dTT-fA-2b3"/>
...
                                <constraints>
                                    <constraint firstItem="Qgz-uo-244" firstAttribute="top" secondItem="MW0-me-i5c" secondAttribute="top" constant="8" id="GrE-vK-vp1"/>
                                    <constraint firstAttribute="trailing" secondItem="Qgz-uo-244" secondAttribute="trailing" constant="3" id="cxA-61-Hab"/>
                                    <constraint firstItem="Qgz-uo-244" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="MW0-me-i5c" secondAttribute="leading" constant="20" symbolic="YES" id="wro-Wm-lqU"/>
                                </constraints>
                            </view>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Money" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pbX-4b-j1f">
                                <rect key="frame" x="20" y="49" width="96.5" height="36"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="30"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="njx-9c-HH6" userLabel="CardWhite">
...
